--- a/CV_ENG.qmd
+++ b/CV_ENG.qmd
@@ -34,26 +34,31 @@ Bachelor of Arts in Economics, Yonsei University, South Korea, 2001.
 
 [Lee, J., Kim, J. & Choi, K. (2023). Joint climate stress-test, FSS working paper 2023-1.](https://www.fss.or.kr/fss/bbs/B0000083/view.do?nttId=132378&menuNo=200398&pageIndex=1)
 
-[Yoon, Y., Lee, J., & Jaehak, H. (2023). A study on the relationship between corporate carbon emissions and stock market returns. Journal of Financial Regulation and Supervision, 10(2), 1–44.](http://doi.org/10.23229/fss.2023.10.2.001)
+[Yoon, Y., Lee, J., & Hwang, J. (2023). A study on the relationship between corporate carbon emissions and stock market returns. Journal of Financial Regulation and Supervision, 10(2), 1–44.](http://doi.org/10.23229/fss.2023.10.2.001)
 
 [Lee, J. & de Carvalho, M. (2019). Technological improvements or climate change? Bayesian modeling of time‑varying conformance to Benford’s Law. Plos One, 14(4), e0213300.](https://doi.org/10.1371/journal.pone.0213300)
 
 
 ### Talks/Posters
 
-Lee, J., & de Carvalho, M. (2018). “Modelling Time‑Varying Conformance to Benford’s Law”. a poster at ISBA 2018 World meeting, June 2018, Edinburgh, UK.
+Lee, Junho (2024), "Stress-testing & other macroprudential supervision techniques in the Financial Supervisory Service", a talk at NFSC-KOICA international conference, 'Vietnam's financial market: Opportunities and challenges', Dec 2023, Dalat, Vietnam. 
 
-Lee, J., de Carvalho, M. & Rua, A. (2019). “What hides behind an extreme currency demand? Bayesian semi‑parametric modelling of heteroscedastic extremes”. a poster at Centre for Statistics conference, June 2019, Edinburgh, UK.
-
-Lee, J., de Carvalho, M. & Rua, A. (2019). “Bayesian semi‑parametric modelling of heteroscedastic extremes”. a talk at Extreme Value Analysis 2019, July 2019, Zagreb, Croatia.
-
-Lee, J., de Carvalho, M. & Rua, A. (2019). “Bayesian semiparametric regression for heavy‑tailed responses”. a talk at CMstatistics 2019, 14‑16 December 2019, London, UK.
-
-Lee, J., de Carvalho, M., & Rua, A. (2021). “Bayesian smoothing of time‑varying extremal dependence in international stock markets”. a talk at Eco‑stats 2021, June 2021, Hong Kong.
+Lee, J., & Kim, J. (2023). “Climate stress‑testing for banking and insurance sectors in South Korea”. a talk at SPGMI_KPMG Webinar, March 2023, on‑line.
 
 Lee, J., & de Carvalho, M. (2021). “Bayesian Semiparametric Inferences for Covariate‑adjusted Extreme‑value Copula with application to Cryptocurrency Markets”. a talk at XXV Congress of the Portuguese Statistical Society, November 2021, Portugal.
 
-Lee, J., & Kim, J. (2023). “Climate stress‑testing for banking and insurance sectors in South Korea”. a talk at SPGMI_KPMG Webinar, March 2023, on‑line.
+Lee, J., de Carvalho, M., & Rua, A. (2021). “Bayesian smoothing of time‑varying extremal dependence in international stock markets”. a talk at Eco‑stats 2021, June 2021, Hong Kong.
+
+Lee, J., de Carvalho, M. & Rua, A. (2019). “Bayesian semiparametric regression for heavy‑tailed responses”. a talk at CMstatistics 2019, 14‑16 December 2019, London, UK.
+
+Lee, J., de Carvalho, M. & Rua, A. (2019). “Bayesian semi‑parametric modelling of heteroscedastic extremes”. a talk at Extreme Value Analysis 2019, July 2019, Zagreb, Croatia.
+
+Lee, J., de Carvalho, M. & Rua, A. (2019). “What hides behind an extreme currency demand? Bayesian semi‑parametric modelling of heteroscedastic extremes”. a poster at Centre for Statistics conference, June 2019, Edinburgh, UK.
+
+Lee, J., & de Carvalho, M. (2018). “Modelling Time‑Varying Conformance to Benford’s Law”. a poster at ISBA 2018 World meeting, June 2018, Edinburgh, UK.
+
+
+
 
 
 
