--- a/posts/smoothing/smoothing1.qmd
+++ b/posts/smoothing/smoothing1.qmd
@@ -1,8 +1,8 @@
 ---
-title: '시계열 평활기법'
-date: '2022-10-04'
-categories: ['Bayesian smoothing']
-description: '시계열 평활기법에 대한 입문'
+title: '평활화 기법 소개'
+date: '2022-10-03'
+categories: ['Bayesian smoothing',"Time series"]
+description: '평활화 기법을 연재하며 '
 execute: 
   message: false
   warning: false
@@ -11,18 +11,41 @@ editor_options:
 ---
 
 
+베이즈 평활화(Bayesian Smoothing)은 비모수 회귀분석(nonparametric regression)의 한 방법으로 여러 방면에서 응용되고 있는 기법이다. 앞으로 지속적인 포스팅을 통하여 베이즈 평활기법의 이론적 부분과 다양한 응용사례를 실제 데이터와 예제 코드를 통하여 소개하고자 한다. 
+
+평활화 기법의 접근방법도 전통적 빈도주의(frequentist) 입장과 베이즈주의(Bayesian) 입장으로 나누어 볼 수 있다. 이번 포스트에서는 전통적인 빈도주의 입장에서 벌점우도(penalized likelihood)의 측면에서 평활화의 개념을 설명하고, 시계열 데이터에 대한 응을 사례를 살펴보고자 한다.
 
 
-### 1. 시계열 평활기법
+### 1. 평활화 문제의 설정 (Settings)
 
-이번 절에서는 전통적인 시계열 평활화 문제를 살펴본다. 전통적인 시계열 평활화는 관측값(종속변수)가 정규 분포를 따르는 시계열 자료의 경우  연속하는 추세값의 차이에 벌점을 부여하여 매끄러운 추세를 예측하는 방법을 말한다.  그 다음 전통적 평활화 기법이 추세에 대한 확률보행 사전분포를 부여한 다음 사후분포를 구하여 얻은 베이지안 평활화 기법에서의 평균과 밀접한 관계가 있음을 보이고자 한다.
+전통적인 평활화 기법은 주로 시계열 관측값(종속변수)가 정규 분포를 따르는 시계열 자료라고 가정하고, 연속하는 추세값의 차이가 크게 벌어지는 경우 이에 대한 벌점을 부여하여 매끄러운 추세선을 만드는 것을 의미한다. 
 
-벡터 $\mathbf y=(y_1,\ldots, y_T)$가 동일한 간격으로 관측된 시계열 자료라고 가정하자. 즉,  
+우리가 $T$ 기간동안 동일한 간격으로 관측한 시계열 자료를 가지고 있다고 생각해 보자. 
+우리의 관심은 이 시계열 자료의 내제적인 추세를 구하고자 한다. 
+이 시계열에 대한 관측값을 $y_1,\ldots, y_T$라고 하고, 추세를 $\mu_1,\ldots, \mu_T$라고 하면 다음과 같이 모형을 설정할 수 있다.
 $$
 y_t=\mu_t+\varepsilon_t,\quad t=1,\ldots, T
 $$
 
- 여기서 $\boldsymbol\mu=(\mu_1,\ldots, \mu_T)$ 는 시계열의 내재적인 추세를, $\boldsymbol\varepsilon=(\varepsilon_1,\ldots,\varepsilon_T)$ 를 $E(\varepsilon_t)=0,\;\forall t$ 를 만족하는 독립인 오차항을 나타낸다.
+ 여기서 $\varepsilon_1,\ldots,\varepsilon_T$ 를 $E(\varepsilon_t)=0,\;\forall t$ 를 만족하는 독립인 오차항을 나타낸다.
+
+
+
+::: panel-tabset
+### R
+
+```{r}
+library(tidyverse)
+
+ggplot(mpg) +
+  geom_jitter(aes(cty, hwy), size = 4, alpha = 0.5) 
+```
+
+### Python
+:::
+
+
+### 2. 벌점최소제곱기준 (PLS)
 
 Whittaker는 다음과 같이 벌점최소제곱 (penalised least square; PLS) 기준을 최소하는 방법으로 $\boldsymbol\mu$ 를 추정하였다. 
 $$
@@ -37,7 +60,12 @@ $$
 $$
 \text{pen}(\boldsymbol\mu) = \sum_{t=d+1}^T (\triangle^d\mu_t)^2,\quad \triangle^d \mu_t=\triangle^{d-1}\mu_t-\triangle^{d-1}\mu_{t-1}
 $$
-$d=1$ 인 경우 수평선 $\mu_t=a$ 로부터 편차에 대하여 벌점을 부과하고, $d=2$ 인 경우 직선 $\mu_t=a+bt$ 로부터의 편차에 벌점을 부과한다. 일반적으로 $d$ 차 벌점은 차수 $d-1$ 차 다항식으로부터 편차에 대하여 벌점을 부과한다. 이제 벌점항을 행렬로 간단히 표기하는 법을 알아보자. $\mu_1,\ldots,\mu_T$ 에 대한 1차 차분 행렬은 다음과 같이 주어진다. 
+$d=1$ 인 경우 수평선 $\mu_t=a$ 로부터 편차에 대하여 벌점을 부과하고, $d=2$ 인 경우 직선 $\mu_t=a+bt$ 로부터의 편차에 벌점을 부과한다. 일반적으로 $d$ 차 벌점은 차수 $d-1$ 차 다항식으로부터 편차에 대하여 벌점을 부과한다.
+
+
+### 3. 행렬표현 (Matrix notation)
+
+이제 벌점항을 행렬로 간단히 표기하는 법을 알아보자. $\mu_1,\ldots,\mu_T$ 에 대한 1차 차분 행렬은 다음과 같이 주어진다. 
 $$
 \mathbf D_1^{(T-1)\times T}=\begin{pmatrix}-1& 1 &0& \cdots& 0\\ \vdots&-1&1&&\vdots\\0&\cdots&&-1&1\\\end{pmatrix},\qquad \mathbf D_1^{(T-1)\times T}\boldsymbol\gamma=\begin{pmatrix}\mu_2-\mu_1 \\ \cdots\\ \mu_T-\mu_{T-1}\\\end{pmatrix}
 $$
@@ -60,18 +88,24 @@ $$
 $$
 
 
-벌점행렬의 랭크는 $rank(\mathbf K_d)=T-d$ 로 완전한 랭크를 갖지 않는다. 따라서, 벌점을 적용받지 않는 $d-1$차까지의 다항식은 $\mathbf K_d$ 의 널공간을 형성한다. 이제 모형을 행렬과 벡터를 이용하여 다시 정의하자. 
+여기서 벌점행렬의 랭크는 $\text{rank}(\mathbf K_d)=T-d$ 로 완전한 랭크를 갖지 않는다. 따라서, 벌점을 적용받지 않는 $d-1$차까지의 다항식은 $\mathbf K_d$ 의 널공간(null space)을 형성한다. 이제 모형을 행렬과 벡터를 이용하여 다시 정의하자. 
 $$
 \text{PLS}(\boldsymbol\mu)=(\mathbf y-\boldsymbol\mu)'(\mathbf y-\boldsymbol\mu)+\lambda\boldsymbol\mu'\mathbf K\boldsymbol\mu = \mathbf y '\mathbf y -2\boldsymbol\mu'\mathbf y+\boldsymbol\mu'(\mathbf I +\lambda\mathbf K)\boldsymbol\mu
 $$
-최소제곱기준을 만족시키는 $\boldsymbol\mu$를 구하면
+
+### 4. 추론 (Inference)
+
+이제는 최소제곱기준을 극대화시키는 $\boldsymbol\mu$를 구해보자.     
+극대값을 구하기 위하여 PLS 기준을 미분하면 
 $$
 \frac{\partial \text{PLS}(\boldsymbol\mu)}{\partial\boldsymbol\mu}=-2\mathbf y + 2(\mathbf I +\lambda \mathbf K )\boldsymbol\mu=0\quad \Rightarrow\quad \hat{\boldsymbol\mu}=(I+\lambda \mathbf K)^{-1}\mathbf y
 $$
-PLS 추정량은 능형회귀 (ridge shrinkage) 추정량과 동일한 구조를 갖는데, 관측치 $y$ 를 부드러운 추세 $\mu$의 값으로 끌어 당기는 현상이 나타난다. PLS 추정량의 기대값과 분산은 다음과 같다.
+PLS 추정량(estimator)은 능형회귀 (ridge shrinkage) 추정량과 동일하게 관측치 $y$ 를 부드러운 추세 $\mu$의 값으로 끌어 당기는 현상이 나타난다. PLS 추정량의 기대값과 분산은 다음과 같다.
 
-1.  $E(\hat{\boldsymbol\mu})=E[(\mathbf I +\lambda \mathbf K)^{-1}\mathbf y)=(\mathbf I+\lambda\mathbf K)^{-1}\boldsymbol\mu,$ 즉 PLS 추정량은 편차 추정량이다.
-2.  오차항을 i.i.d.라 가정하면 분산은 $Cov(\hat{\mathbf\mu})=(\mathbf I+\lambda\mathbf K)^{-1}Cov(\mathbf y)(\mathbf I+\lambda\mathbf K)^{-1}=\sigma^2(\mathbf I+\lambda\mathbf K)^{-1}$
+>1. PLS 추정량은 편의 추정량(biased)이다. 즉, 
+$$E(\hat{\boldsymbol\mu})=E[(\mathbf I +\lambda \mathbf K)^{-1}\mathbf y)=(\mathbf I+\lambda\mathbf K)^{-1}\boldsymbol\mu.$$
+>2.  오차항을 i.i.d.라 가정하면 분산은 
+$$Cov(\hat{\mathbf\mu})=(\mathbf I+\lambda\mathbf K)^{-1}Cov(\mathbf y)(\mathbf I+\lambda\mathbf K)^{-1}=\sigma^2(\mathbf I+\lambda\mathbf K)^{-1}$$
 
 PLS 추정치는 분산을 줄임으로써 평균제곱오차(mean squared error; MSE)를 감소시킨다. $\lambda$의 값이 작으면 편차가 작아지지만 변동성이 크고, $\lambda$의 값이 크면 변동성은 적지만 편차가 커진다. 마지막으로 오차가 iid인 가우스 분포를 따른다고 하면, 즉 $\varepsilon_t\sim N(0,\sigma^2)$ 이면 PLS 추정량의 분포는 다음과 같다.
 $$
