--- a/CV_ENG.qmd
+++ b/CV_ENG.qmd
@@ -64,13 +64,21 @@ Lee, J., & de Carvalho, M. (2018). “Modelling Time‑Varying Conformance to Be
 
 ### Work Experience
 
-**Financial Supervisory Service** : Lead manager
+**Financial Supervisory Service** (2003 -- present)
 
-Developing fraud detection models in stock markets, 2014 -- present. <br>
-Stress‑testing of financial companies and scenario analysis of climate‑change, 2021 -- 2023.<br>
-Leave for academic training, 2016 -- 2020.<br>
-Investigating market frauds in capital markets, 2013 -- 2016.<br>
-Examining financial investment companies, 2010 -- 2013.<br>
-Investigating market frauds in stock and derivative markets, 2007 -- 2010.<br>
-Inspecting corporate disclosure reports, 2005 -- 2007.<br>
-Developing on‑site examinaion techniques, 2003 -- 2005.<br>
+
+* Developing fraud detection models in stock markets, Lead Examiner, 2024 -- present.
+
+* Stress‑testing of financial companies and scenario analysis of climate‑change, Lead Manager, 2021 -- 2023.
+
+* Leave for academic training, 2016 -- 2020.<br>
+
+* Investigating market frauds in capital markets, Senior Examiner, 2013 -- 2016.
+
+* Examining financial investment companies, Senior Examiner, 2010 -- 2013.
+
+* Investigating market frauds in stock and derivative markets, Senior Examiner, 2007 -- 2010.
+
+* Inspecting corporate disclosure reports, Manager, 2005 -- 2007.
+
+* Developing on‑site examination techniques, Examiner, 2003 -- 2005.
