--- a/CV_KOR.qmd
+++ b/CV_KOR.qmd
@@ -59,12 +59,18 @@ Lee, J., & de Carvalho, M. (2018). “Modelling Time‑Varying Conformance to Be
 
 ### Work Experience
 
-**금융감독원** : 수석조사역
+**금융감독원** (2003 ~ 현재)
 
-불공정거래 조사 및 시세조종탐지/자금추적 모형 개발 (조사2국), 2024 -- 현재. <br>
-스트레스테스트 및 기후시나리오 분석 (금융시장안정국), 2021 -- 2023.<br>
-불공정거래 조사·기획 (조사1국), 2013 -- 2016.<br>
-금융투자회사 검사(금융투자서비스국·금융투자검사국), 2010 -- 2013.<br>
-파생상품·증권 불공정거래조사 (조사1·2국), 2007 -- 2010.<br>
-지분공시 심사(공시감독국), 2005 -- 2007.<br>
-검사제도·기획 (검사총괄국), 2003 -- 2005.<br>
+* 불공정거래 조사 및 시세조종탐지/자금추적 모형 개발 (조사2국), 수석검사역, 2024 -- 현재.
+
+* 스트레스테스트 및 기후시나리오 분석 (금융시장안정국), 수석조사역, 2021 -- 2023.
+
+* 불공정거래 조사·기획 (조사1국), 선임검사역, 2013 -- 2016.
+
+* 금융투자회사 검사(금융투자서비스국·금융투자검사국), 선임검사역, 2010 -- 2013.
+
+* 파생상품·증권 불공정거래조사 (조사1·2국), 선임검사역, 2007 -- 2010.
+
+* 지분공시 심사(공시감독국), 조사역, 2005 -- 2007.
+
+* 검사제도·기획 (검사총괄국), 검사역, 2003 -- 2005.
