--- a/index.qmd
+++ b/index.qmd
@@ -24,7 +24,7 @@ page-layout: full
 
 극단값 이론과(Extreme value theory) 베이즈비모수통계학(Nonparametric Bayes)을 전공하였고, R 언어를 이용한 실용적인 데이터 분석 패키지 개발과 통계학과 머신러닝 모형의 수학적 배경에 관심을 갖고 있습니다.
 
-유학 이후 금융감독원에서 거시경제 및 기후경제모형 모델링, 금융산업과 금융회사에 대한 스트레스 테스트 업무를 주로 담당했었고, 현재는 증권 불공정거래 탐색 및 자금추적  모형을 개발하고 있습니다
+유학 이후 금융감독원에서 거시경제 및 기후경제모형 모델링, 금융산업과 금융회사에 대한 스트레스 테스트 업무를 주로 담당했었고, 현재는 시세조종 등 증권 불공정거래를 조사하면서 불공정거래의 탐색 및 계좌추적 모형을 개발하고 있습니다
 
 **Hi, I'm Junho Lee, a Bayesian statistician and R programmer.**  
 
